--- a/admin/templ/providerDetail.html
+++ b/admin/templ/providerDetail.html
@@ -2,17 +2,12 @@
 <section class="panel panel-default">
     <div class="row m-l-none m-r-none">
         <div class="col-lg-6">
-            <h3 class="m-b-none">{{viewTitle}}</h3>
+            <h3 class="m-b-none">{{selProvider.title}}</h3>
         </div>
         <div class="col-lg-6" ng-include="subTools">
         </div>
     </div>
 </section>
-<section class="vbox">
-<header class="header bg-white b-b b-light">
-    <p>{{selProvider.name}}</p>
-</header>
-<section>
 <section class="hbox stretch">
 <aside class=" bg-light lter b-r">
 <section class="hbox stretch">
@@ -118,7 +113,7 @@
 <div class="tab-pane" id="map">
     <leaflet center="center" markers="markers" paths="paths" class="map-page"></leaflet>
 </div>
-    <div class="tab-pane" id="offers">
+    <div class="tab-pane" id="offers" ng-include="offer_widget">
 
     </div>
 <div class="tab-pane" id="prods" ng-include="prodTemplate">
@@ -184,6 +179,6 @@
     <!--</section>-->
 <!--</aside>-->
 </section>
-</section>
-</section>
+
+
 </div>
