--- a/admin/templ/stepDetail.html
+++ b/admin/templ/stepDetail.html
@@ -20,6 +20,7 @@
         <li class=""><a href="#edit" ng-click="showRaw()" data-toggle="tab">Editor</a></li>
         <li class=""><a href="#ques" ng-click="editSurvey()" data-toggle="tab" ng-show="obj.isSurvey">Questions</a></li>
         <li class=""><a href="#preview" ng-click="showTemplate()" data-toggle="tab">Preview</a></li>
+        <li class=""><a href="#track" ng-click="showTrackTags()" data-toggle="tab">Tracking</a></li>
         <li class=""><a href="#int" ng-click="showIntscript()" data-toggle="tab">Integration</a></li>
     </ul>
 </header>
@@ -38,28 +39,21 @@
         <div class="line pull-in"></div>
         <div class="btn-toolbar m-b-sm btn-editor">
             <div class="btn-group">
-                <a class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Hyperlink"><i class="fa fa-save"></i>Save Draft
-                </a>
-                <div class="dropdown-menu">
-                    <div class="input-group m-l-xs m-r-xs">
-                        <input class="form-control input-medium" placeholder="Comment" type="text" ng-model="draft.comment">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default btn-sm" ng-click="saveDraft()" type="button">Save</button>
-                        </div>
+                <section class="panel panel-default pos-rlt clearfix">
+                    <header class="panel-heading">
+                        <ul class="nav nav-pills pull-right">
+                            <li>
+                                <a href="#" class="panel-toggle btn btn-default btn-sm m-b">
+                                    <i class="fa fa-minus icon-muted text-active"></i>
+                                    <i class="fa fa-plus icon-muted text"></i>Publish</a>
+                            </li>
+                        </ul>
+                    </header>
+                    <div class="panel-body clearfix collapse">
+                        <div class="form-group"><input type="text" ng-model="draft.comment" class="form-control" placeholder="Name"> </div>
+                        <button class="btn btn-success" ng-click="publish()">Publish</button>
                     </div>
-                </div>
-            </div>
-            <div class="btn-group">
-                <a class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Hyperlink"><i class="fa fa-eject"></i>Publish
-                </a>
-                <div class="dropdown-menu">
-                    <div class="input-group m-l-xs m-r-xs">
-                        <input class="form-control input-medium" placeholder="Comment" type="text" data-edit="createLink">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default btn-sm" ng-click="publish()" type="button">Publish</button>
-                        </div>
-                    </div>
-                </div>
+                </section>
             </div>
 
             <div class="btn-group">
@@ -116,18 +110,6 @@
                 </a>
             </div>
 
-
-            <div class="btn-group"> <a class="btn btn-default btn-sm" title="" id="pictureBtn" data-original-title="Insert picture (or just drag &amp; drop)"><i class="fa fa-picture-o"></i>
-            </a>
-                <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" style="opacity: 0; position: absolute; top: 0px; left: 0px; width: 35px; height: 30px; ">
-            </div>
-            <div class="btn-group">
-                <a class="btn btn-default btn-sm" data-edit="undo" title="" data-original-title="Undo (Ctrl/Cmd+Z)"><i class="fa fa-undo"></i>
-                </a>
-                <a class="btn btn-default btn-sm" data-edit="redo" title="" data-original-title="Redo (Ctrl/Cmd+Y)"><i class="fa fa-repeat"></i>
-                </a>
-            </div>
-            <input type="text" class="form-control-trans pull-left" data-edit="inserttext" id="voiceBtn" x-webkit-speech="" style="width: 25px; height: 28px; display: none; ">
         </div>
         <textarea class="form-control no-border" rows="30" placeholder="HTML template text..." ng-model="obj.rawhtml" mk-keydown="tmplkeydown($event)"></textarea>
         <aside class="bg-light lter b-r aside-md hidden-print nav-xs-right" id="editornav">
@@ -160,11 +142,16 @@
                                     </a>
                                     <ul class="nav lt" style="display: block">
                                         <li ng-repeat="v in versions">
-                                            <a href="#/admin" ng-click="loadVersion(v)" >
-                                                <i class="fa fa-angle-right"></i>
-                                                <span><strong>{{v.comment}}</strong></span>
-                                                <span>{{v.changedFormatted}}</span>
-                                            </a>
+                                             <span class="pull-right">
+                                                <a href="#" ng-click="removeVersion(v)"><i class="fa fa-times icon-muted fa-fw"></i></a>
+                                             </span>
+
+                                            <div class="dd-handle">
+                                                <a href="#" class="clear" ng-click="loadVersion(v)">
+                                                    <strong class="block">{{v.comment}}</strong>
+                                                    <small>{{v.changedFormatted}}</small>
+                                                </a>
+                                            </div>
                                         </li>
                                     </ul>
                                 </li>
@@ -184,6 +171,11 @@
     <iframe style="width: 100%; min-height: 600px" ng-src="{{masterTmpl}}?step={{obj._id}}&tenant={{tenant}}"></iframe>
 
 </div>
+    <div class="tab-pane" id="track">
+        <div class="line pull-in"></div>
+        <textarea class="form-control no-border" rows="30" placeholder="Tracking tags..." ng-model="obj.tracktags"></textarea>
+
+    </div>
 <div class="tab-pane" id="int">
     <div class="line pull-in"></div>
     <textarea class="form-control no-border" rows="30" placeholder="Integration script..." ng-model="obj.integration"></textarea>
