--- a/cctmpl.html
+++ b/cctmpl.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="assets/css/bootstrap.css"/>
-    <!--<link rel="stylesheet" href="assets/css/bootstrap-responsive.css"/>-->
-    <!--<link rel="stylesheet" href="css/ext.css"/>-->
-    <link href="assets/css/base.css" rel="stylesheet">
-    <link href="assets/css/buttons.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.css" rel="stylesheet">
-    <link href="assets/css/datepicker/jquery-ui-1.10.3.custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="admin/css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="admin/css/animate.css" type="text/css" />
+    <link rel="stylesheet" href="admin/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="admin/css/font.css" type="text/css" />
+    <link rel="stylesheet" href="admin/js/fuelux/fuelux.css" type="text/css" />
+    <link rel="stylesheet" href="admin/js/select2/select2.css" type="text/css" />
+    <link rel="stylesheet" href="admin/js/nestable/nestable.css" type="text/css">
+    <link rel="stylesheet" href="admin/css/app.css" type="text/css" />
+    <link rel="stylesheet" href="admin/js/calendar/bootstrap_calendar.css" type="text/css" />
+
     <script src="assets/js/jquery-1.10.2.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery.placeholder.min.js"></script>
@@ -46,51 +49,99 @@
     <script src="ctrl/adminHelper.js" type="text/javascript"></script>
 </head>
 <body ng-app="cart">
-<div class="row-fluid" ng-controller="agentctrl">
-    <!--<div cart-parms app-Type="Duke" cart_zipval="32967"></div>-->
-    <!--<div class="navbar navbar-inner">-->
-        <!--<div class="container">-->
-        <!--<ul class="nav">-->
-            <!--<li class="active"><a class="brand" ng-click="onDash()">Agent's Tool</a></li>-->
-            <!--<li ng-click="agentQualify">New Session</li>-->
-            <!--<li ng-click="startChat">Chat</li>-->
-        <!--</ul>-->
-    <!--</div>-->
-    <!--</div>-->
-    <nav class="navbar navbar-default" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Kiosk</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a ng-click="startCall()">New Call</a></li>
-                <li><a ng-click="startChat()">Chat</a></li>
-                <!--<li class="dropdown">-->
-                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>-->
-                    <!--<ul class="dropdown-menu">-->
-                        <!--<li ng-click="agentQualify">New Session</li>-->
-                        <!--<li><a href="#">Another action</a></li>-->
-                        <!--<li><a href="#">Something else here</a></li>-->
-                        <!--<li class="divider"></li>-->
-                        <!--<li><a href="#">Separated link</a></li>-->
-                        <!--<li class="divider"></li>-->
-                        <!--<li><a href="#">One more separated link</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-            </ul>
-         </div>
-    </nav>
-    <div class="container" style="position: relative;width: 95%">
-        <div style="float: left; max-height: 300px;overflow-y: scroll; margin-right: 20px; border-right: solid 1px" dynamic="propsEl"></div>
-        <div id="bv_cart_cont" style="float: left" ng-include="wrapperUrl"></div>
+<div class="wizard clearfix" ng-show="previewMode">
+    <ul class="steps">
+        <li class="active" ng-repeat="w in steps" ng-click="pickStep(w)"><span ng-class="{'badge  badge-success': isActiveStep(w),'badge badge-info': !isActiveStep(w)}">{{w.order}}</span>{{w.title}}</li>
+    </ul>
+    <div class="actions">
+        <button type="button" class="btn btn-default btn-xs btn-prev" ng-click="restart()">Start</button>
+        <button type="button" class="btn btn-default btn-xs btn-prev" ng-click="back()" >Prev</button>
+        <button type="button" class="btn btn-default btn-xs btn-next" ng-click="next()" >Next</button>
     </div>
 </div>
+    <section class="hbox stretch" ng-controller="agentctrl" ng-show="agent">
+        <div id="bv_cart_cont" ng-include="wrapperUrl"></div>
+        <aside class="bg-light lter b-r aside-md hidden-print nav-xs-right" id="agentnav">
+            <section class="vbox">
+                <header class="header bg-primary lter text-center clearfix">
+                    <div class="row">
+                        <a href="#agentnav" data-toggle="class:nav-xs" class="pull-left btn btn-sm btn-default btn-icon">
+                            <i class="fa fa-angle-right text"></i>
+                            <i class="fa fa-angle-left text-active"></i>
+                        </a>
+                        <div class="btn-group">
+                            <!--<button type="button" class="btn btn-sm btn-dark btn-icon"></button>-->
+                            <div class="btn-group hidden-nav-xs">
+                                <button type="button" class="btn btn-sm btn-primary" ng-click="startCall()">
+                                    New Call
+                                </button>
+                                <button type="button" class="btn btn-sm" ng-click="startChat()">
+                                    Chat
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </header>
+                <section class="w-f ">
+                    <div class="slim-scroll" data-height="auto" data-disable-fade-out="true" data-distance="0" data-size="5px" data-color="#333333">
+                        <!-- nav -->
+                        <nav class="nav-primary hidden-xs">
+                            <ul class="nav">
+                                <li >
+                                    <a href="index.html"  >
+                                        <i class="fa fa-dashboard icon">
+                                            <b class="bg-danger"></b>
+                                        </i>
+                                        <span>Scorecard</span>
+                                    </a>
+                                </li>
+                                <li  class="active">
+                                    <a href="#layout"   class="active">
+                                        <i class="fa fa-filter icon">
+                                            <b class="bg-warning"></b>
+                                        </i>
+                        <span class="pull-right">
+                          <i class="fa fa-angle-down text"></i>
+                          <i class="fa fa-angle-up text-active"></i>
+                        </span>
+                                        <span>Customer Lookup</span>
+                                    </a>
+                                    <ul class="nav lt" style="display: block">
+                                        <li ng-repeat="fd in filterList">
+                                            <section class="panel panel-default">
+                                                <div class="panel-body" ng-include="fd.template"></div>
+                                            </section>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </nav>
+                        <!-- / nav -->
+                    </div>
+                </section>
+            </section>
+        </aside>
+    </section>
+
+    <!--<nav class="navbar navbar-default" role="navigation">-->
+        <!--&lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;-->
+        <!--<div class="navbar-header">-->
+            <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">-->
+                <!--<span class="sr-only">Toggle navigation</span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+            <!--</button>-->
+            <!--<a class="navbar-brand" href="#">Kiosk</a>-->
+        <!--</div>-->
+        <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
+            <!--<ul class="nav navbar-nav">-->
+                <!--<li><a ng-click="startCall()">New Call</a></li>-->
+                <!--<li><a ng-click="startChat()">Chat</a></li>-->
+               <!---->
+            <!--</ul>-->
+         <!--</div>-->
+    <!--</nav>-->
+
 </body>
 </html>
