--- a/tenants/Amazon/aztmpl.html
+++ b/tenants/Amazon/aztmpl.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="assets/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../../admin/js/fuelux/fuelux.css" type="text/css" />
+    <link rel="stylesheet" href="../../admin/css/app.css" type="text/css" />
     <!--<link rel="stylesheet" href="assets/css/bootstrap-responsive.css"/>-->
     <!--<link rel="stylesheet" href="css/ext.css"/>-->
     <link href="assets/css/base.css" rel="stylesheet">
@@ -50,7 +52,17 @@
 </head>
 <body ng-app="cart">
 <div class="row-fluid" ng-controller="cartadminctrl">
-    <div cart-parms app-Type="Amazon" cart_zipval=""></div>
+    <div cart-parms app-Type="" cart_zipval=""></div>
+    <div class="wizard clearfix" ng-show="previewMode">
+        <ul class="steps">
+            <li class="active" ng-repeat="w in steps" ng-click="pickStep(w)"><span ng-class="{'badge  badge-success': isActiveStep(w),'badge badge-info': !isActiveStep(w)}">{{w.order}}</span>{{w.title}}</li>
+        </ul>
+        <div class="actions">
+            <button type="button" class="btn btn-default btn-xs btn-prev" ng-click="restart()">Start</button>
+            <button type="button" class="btn btn-default btn-xs btn-prev" ng-click="back()" >Prev</button>
+            <button type="button" class="btn btn-default btn-xs btn-next" ng-click="next()" >Next</button>
+        </div>
+    </div>
     <div id="bv_cart_cont" class="container" style="display: none" ng-include="wrapperUrl">
     </div>
 </div>
