tweaks with quals and rules

--- a/admin/templ/ctrls/checklist.html
+++ b/admin/templ/ctrls/checklist.html
@@ -1,4 +1,7 @@
+<div class="form-group">
+    <label>{{fd.label}}</label>
 <div class="checkbox" ng-repeat="opt in fd.options">
     <label>
         <input type="checkbox" ng-model="opt.optvalue"> {{opt.label}}</label>
+</div>
 </div>
