--- a/admin/templ/tenantDetail.html
+++ b/admin/templ/tenantDetail.html
@@ -2,16 +2,13 @@
 <section class="panel panel-default">
     <div class="row m-l-none m-r-none">
         <div class="col-lg-6">
-            <h3 class="m-b-none">{{viewTitle}}</h3>
+            <h3 class="m-b-none">{{selTenant.name}}</h3>
         </div>
         <div class="col-lg-6" ng-include="subTools">
         </div>
     </div>
 </section>
 <section class="vbox">
-<header class="header bg-white b-b b-light">
-    <p>{{selTenant.name}}</p>
-</header>
 <section>
 <section class="hbox stretch">
 <aside class="bg-white">
