--- a/portal.html
+++ b/portal.html
@@ -312,7 +312,7 @@
         <li >
             <a href="#/admin" ng-click="loadSegments()" >
                 <i class="fa fa-angle-right"></i>
-                <span>Recommendation Engine</span>
+                <span>Display Rules</span>
             </a>
         </li>
         <li >
