--- a/admin/templ/chartPage.html
+++ b/admin/templ/chartPage.html
@@ -1,5 +1,5 @@
 <section class="m-t-lg wrapper-md animated fadeInDown">
-    <div class="container aside-xxl"><a class="navbar-brand block" href="#">{{viewTitle}}</a>
+    <div class="container aside-xxxl"><a class="navbar-brand block" href="#">{{viewTitle}}</a>
         <section class="panel panel-default m-t-lg bg-white">
             <form class="panel-body wrapper-lg">
                 <chart data="chartData" opt="chartOpt"></chart>
