--- a/admin/templ/gridTools.html
+++ b/admin/templ/gridTools.html
@@ -3,5 +3,6 @@
     <button class="btn btn-success btn-sm" ng-click="export()"><i class="fa fa-upload"></i> Export</button>
     <button class="btn btn-success btn-sm" ng-click="import()"><i class="fa fa-download"></i> Import</button>
     <button class="btn btn-success btn-sm" ng-click="saveMassChanges()"><i class="fa fa-magic"></i> Mass Update</button>
+    <button class="btn btn-success btn-sm" ng-click="cloneRec()"><i class="fa fa-copy"></i> Copy</button>
     <button class="btn btn-success btn-sm" ng-click="deleteRec()"><i class="fa fa-times-circle-o"></i> Delete</button>
 </div>
