survey based rules

--- a/admin/templ/ctrls/checkbox.html
+++ b/admin/templ/ctrls/checkbox.html
@@ -1,4 +1,4 @@
 <div class="checkbox">
     <label>
-        <input type="checkbox" ng-model="fd.fldvalue"> {{fd.label}}</label>
+        <input type="checkbox" ng-model="fd.fldvalue" ng-change="onfldChange(fd)"> {{fd.label}}</label>
 </div>
