--- a/admin/templ/ctrls/text.html
+++ b/admin/templ/ctrls/text.html
@@ -1,4 +1,4 @@
 <div class="form-group">
     <label>{{fd.label}}</label>
-    <input class="form-control" ng-model="fd.fldvalue" placeholder="{{fd.label}}">
+    <input class="form-control" ng-model="fd.fldvalue" placeholder="{{fd.label}}" ng-change="onfldChange(fd)">
 </div>
