--- a/admin/templ/genericEdit.html
+++ b/admin/templ/genericEdit.html
@@ -1,12 +1,12 @@
-<div class="row">
-    <div class="col-sm-6">
-        <section class="panel panel-default">
-            <!--<header class="panel-heading font-bold">{{viewTitle}}</header>-->
-            <div class="panel-body">
+<section class="m-t-lg wrapper-md animated fadeInDown" ng-controller="editctrl">
+    <div class="container aside-xxl"><a class="navbar-brand block" href="#">{{viewTitle}}</a>
+        <section class="panel panel-default m-t-lg bg-white">
+            <form class="panel-body wrapper-lg">
                 <form role="form">
-                    <div dynamic="propsEl"></div>
+                    <div class="panel-body" ng-include="fd.template" ng-repeat="fd in fieldList"></div>
+                    <!--<div dynamic="propsEl"></div>-->
                 </form>
-            </div>
+                <a href="#" ng-click="saveChanges()" class="btn btn-default btn-block">Save & Close</a></form>
         </section>
     </div>
-</div>
+</section>
