--- a/portal.html
+++ b/portal.html
@@ -568,6 +568,7 @@
 <script src="ctrl/exportctrl.js" type="text/javascript"></script>
 <script src="ctrl/ruledefctrl.js" type="text/javascript"></script>
 <script src="ctrl/blockctrl.js" type="text/javascript"></script>
+<script src="ctrl/editctrl.js" type="text/javascript"></script>
 <script src="ctrl/reportctrl.js" type="text/javascript"></script>
 <script src="ctrl/fieldctrl.js" type="text/javascript"></script>
 <script src="ctrl/gridctrl.js" type="text/javascript"></script>
