--- a/admin/templ/gridTools.html
+++ b/admin/templ/gridTools.html
@@ -1,4 +1,5 @@
 <div class="doc-buttons pull-right">
+    <button class="btn btn-success btn-sm" ng-click="editRec()"><i class="fa fa-pencil"></i> Edit</button>
     <button class="btn btn-success btn-sm" ng-click="saveChanges()"><i class="fa fa-save"></i> Save</button>
     <button class="btn btn-success btn-sm" ng-click="export()"><i class="fa fa-upload"></i> Export</button>
     <button class="btn btn-success btn-sm" ng-click="import()"><i class="fa fa-download"></i> Import</button>
